--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,4 @@ logzero>=1.5.0
 xmltodict>=0.11.0
 plotly>=3.10.0
 pyyaml>=3.12
-wtforms>=3.0.0a1 # not directly required, pinned by Snyk to avoid a vulnerability
+werkzeug>=3.1.4 # not directly required, pinned by Snyk to avoid a vulnerability
